--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -12,3 +12,33 @@ footer.page-footer {
   padding-top: 0;
   text-align: right;
 }
+.top-content .carousel-item {
+    height: 100vh;
+    min-height: 400px;
+}
+ 
+.top-content .carousel-item img {
+    height: 100%;
+    object-fit: cover;
+}
+.carousel-item {
+  height: 100vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+header.navbar-fixed {
+  position: absolute;
+  z-index: 3;
+  width: 100vw;
+}
+.landing1 {
+  height: 100vh;
+  padding: 8%;
+}
+.l1Header {
+  font-family: 'Montserrat', sans-serif;
+}
