--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -38,12 +38,14 @@
 </section>
 <section class="landing1">
     <div class="l1Header">
-        <h1>Communication For Large Scale</h1>
-        <h1>Buisnesses Made Easy</h1>
+        <div class="l1title">
+            <h1>Communication For Large Scale</h1>
+            <h1>Buisnesses Made Easy</h1>
+        </div>
 
-        <div class="container">
-            <div class="row row-cols-2">
-                <div class="col">
+        <div class="grid-container">
+            <!-- <div class="row row-cols-2"> -->
+                <div class="grid-item">
                     <h2>Helping you grow</h2>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
@@ -52,7 +54,7 @@
                     </p>
                     <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
                 </div>
-                <div class="col">
+                <div class="grid-item">
                     <h2>Uniting All Your Employees and Team Members</h2>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
@@ -61,7 +63,7 @@
                     </p>
                     <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
                 </div>
-                <div class="col">
+                <div class="grid-item">
                     <h2>Simple Fast Connection at Your Fingertips</h2>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
@@ -70,7 +72,7 @@
                     </p>
                     <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
                 </div>
-                <div class="col">
+                <div class="grid-item">
                     <h2>Keep Track Of All Events, Notifications, and Alerts</h2>
                     <p>
                         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
@@ -79,7 +81,7 @@
                     </p>
                     <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </div>
 
