--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -39,6 +39,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 {% if user.is_authenticated %}
                 <li><a class="dropdown-item" href="{% url 'logout' %}">Log Out</a></li>
+                <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
                 {% else %}
                 <li><a class="dropdown-item" href="{% url 'signup' %}">Sign Up</a></li>
                 <li><a class="dropdown-item" href="{% url 'login' %}">Log In</a></li>
