--- a/main_app/templates/main_app/profile_form.html
+++ b/main_app/templates/main_app/profile_form.html
@@ -5,7 +5,7 @@
 {% if object %}
   <h1>Edit Profile</h1>
 {% else %}
-  <h1>Create Profile (require)</h1>
+  <h1>Create Profile (required)</h1>
 {% endif %}
 <form action="" method="POST">
   {% csrf_token %}
