--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -122,14 +122,14 @@
         <h3>Copmanies using InTouch</h3>
     </div>
     <div class="landingPanel4g grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
+        <div class="grid-item companies">1</div>
+        <div class="grid-item companies">2</div>
+        <div class="grid-item companies">3</div>
+        <div class="grid-item companies">4</div>
+        <div class="grid-item companies">5</div>
+        <div class="grid-item companies">6</div>
+        <div class="grid-item companies">7</div>
+        <div class="grid-item companies">8</div>
     </div>
 </section>
 
