Profile Update Updates

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,21 +7,24 @@
             <div class="carousel-item active min-vh-100">
                 <img src="https://i.imgur.com/UBcop2h.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1>The Simplest way to connect with your employees on a large scale</h1>
+                    <h1 class="animate__animated animate__fadeInUpBig">The Simplest way to connect with your employees
+                        on a large scale</h1>
                     <a class="btn btn-primary" href="{% url 'signup' %}">Join Today</a>
                 </div>
             </div>
             <div class="carousel-item min-vh-100">
                 <img src="https://i.imgur.com/NmWStcY.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1>The Simplest way to connect with your employees on a large scale</h1>
+                    <h1 class="animate__animated animate__fadeInUpBig">The Simplest way to connect with your employees
+                        on a large scale</h1>
                     <a class="btn btn-primary" href="{% url 'signup' %}">Join Today</a>
                 </div>
             </div>
             <div class="carousel-item min-vh-100">
                 <img src="https://i.imgur.com/6tglCrw.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1>The Simplest way to connect with your employees on a large scale</h1>
+                    <h1 class="animate__animated animate__fadeInUpBig">The Simplest way to connect with your employees
+                        on a large scale</h1>
                     <a class="btn btn-primary" href="{% url 'signup' %}">Join Today</a>
                 </div>
             </div>
@@ -46,7 +49,7 @@
         <div class="grid-container">
             <!-- <div class="row row-cols-2"> -->
             <div class="grid-item">
-                <h2>Helping you grow</h2>
+                <h2 class="animate__animated animate__fadeInUp">Helping you grow</h2>
                 <p>
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
@@ -55,7 +58,7 @@
                 <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
             </div>
             <div class="grid-item">
-                <h2>Uniting All Your Employees and Team Members</h2>
+                <h2 class="animate__animated animate__fadeInUp">Uniting All Your Employees and Team Members</h2>
                 <p>
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
@@ -64,7 +67,7 @@
                 <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
             </div>
             <div class="grid-item">
-                <h2>Simple Fast Connection at Your Fingertips</h2>
+                <h2 class="animate__animated animate__fadeInUp">Simple Fast Connection at Your Fingertips</h2>
                 <p>
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
@@ -73,7 +76,7 @@
                 <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
             </div>
             <div class="grid-item">
-                <h2>Keep Track Of All Events, Notifications, and Alerts</h2>
+                <h2 class="animate__animated animate__fadeInUp">Keep Track Of All Events, Notifications, and Alerts</h2>
                 <p>
                     Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
