--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -21,6 +21,6 @@
 </div>
 
 
-<a href="{ url 'edit_profile' user_id }">Edit Profile</a>
+<a href="{% url 'profile_update' profile.id%}">Edit Profile</a>
 
 {% endblock %}
