--- a/main_app/templates/main_app/profile_edit.html
+++ b/main_app/templates/main_app/profile_edit.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Create Profile</h1>
-<form action="{% url 'profile_create' %}" method="POST">
+<h1>Edit Profile</h1>
+<form action="{% url 'edit_profile' %}" method="POST">
   {% csrf_token %}
   <input type="submit" class="btn" value="login">
   <input type="hidden" name="next" value="{{ next }}">
