--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -14,6 +14,8 @@
             <p>State: {{ profile.state }}</p>
             <p>Phone: {{ profile.ph_number }}</p>
             <p>ID: {{ profile.user.id }}</p>
+            <p>Business: {{ profile.business }}</p>
+        
 
         </div>
     
