--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -35,6 +35,12 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'message' %}">Compose Message</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'recipient_index' %}">Recipients</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'recipient_create' %}">Add Recipients</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
