--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -106,8 +106,12 @@ h1 {
 }
 body{ height:100vh; margin:0; }
 
-header{ min-height:50px; background:lightcyan; }
-footer{ min-height:50px; background:rgb(206, 206, 206); }
+header{ 
+  min-height:50px; background:lightcyan;
+}
+footer{ 
+  min-height:50px; background:rgb(206, 206, 206);
+}
 body{ 
   display:flex; 
   flex-direction:column; 
