--- a/main_app/templates/message.html
+++ b/main_app/templates/message.html
@@ -7,11 +7,9 @@
   <textarea name="content" id="id_content" cols="30" rows="10"></textarea>
   <input type="submit" value="Add Message" class="btn">
   <select name="recipients" id="recipient" multiple="multiple">
-    
     {% for recipient in recipients %}
-    <option value="recipient">{{ recipient.name }}</option>
+    <option name="recipient" value="{{ recipient.ph_number }}">{{ recipient.name }}</option>
     {% endfor %}
-   
   </select>
 </form>
 <table class="striped">
@@ -31,8 +29,4 @@
     {% endfor %}
   </tbody>
 </table>
-<script>
-  const selectEl = document.getElementById('recipient');
-  M.FormSelect.init(selectEl);
-</script>
 {% endblock %}
