Updates Landing Page Companies

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -115,7 +115,7 @@
             <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
         </div>
         <div class="grid-item">
-            <img class="panelImg1right" src="https://i.imgur.com/q0vFLOI.jpg" alt="companyImage">
+            <img class="panelImg1right" src="https://i.imgur.com/Fjo8J6e.jpg" alt="companyImage">
         </div>
 </section>
 <section class="landingPanel4">
@@ -124,15 +124,40 @@
         <h3>The Power of engaging billions of employees in a global scale</h3>
         <h3>Copmanies using InTouch</h3>
     </div>
-    <div class="landingPanel4g grid-container">
-        <div class="grid-item companies">1</div>
-        <div class="grid-item companies">2</div>
-        <div class="grid-item companies">3</div>
-        <div class="grid-item companies">4</div>
-        <div class="grid-item companies">5</div>
-        <div class="grid-item companies">6</div>
-        <div class="grid-item companies">7</div>
-        <div class="grid-item companies">8</div>
+    <div class="landingPanel4g flex-container">
+        <!-- <img class="companies" src="https://i.imgur.com/5EfERqB.png" alt="companies"> -->
+        <!-- <img class="companies" src="https://i.imgur.com/Mc7LitZ.png" alt="companies"> -->
+        <!-- <img class="companies" src="https://i.imgur.com/VZUPtCi.png" alt="companies"> -->
+        <!-- <img class="companies" src="https://i.imgur.com/ASXIyHp.png" alt="companies"> -->
+        <!-- <img class="companies" src="https://i.imgur.com/mcg2w9K.png" alt="companies"> -->
+        <!-- <img class="companies" src="https://i.imgur.com/SKwc9pz.png" alt="companies"> -->
+        <!-- <img class="companies" src="https://i.imgur.com/u5qAWdG.png" alt="companies"> -->
+        <!-- <img class="companies" src="https://i.imgur.com/259lHN0.mp4" alt="companies"> -->
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/h8NFVgA.mp4" type="video/mp4">
+        </video>
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/CGAOJsK.mp4" type="video/mp4">
+        </video>
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/wAVwRyE.mp4" type="video/mp4">
+        </video>
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/McINvRR.mp4" type="video/mp4">
+        </video>
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/IuOHGAU.mp4" type="video/mp4">
+        </video>
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/259lHN0.mp4" type="video/mp4">
+        </video>
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/UOO25SD.mp4" type="video/mp4">
+        </video>
+        <video loop=true muted controls autoplay=true class="companies">
+            <source src="https://i.imgur.com/jfMzxDa.mp4" type="video/mp4">
+        </video>
+          
     </div>
 </section>
 
