Updates Landing Page Companies playback

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -133,28 +133,28 @@
         <!-- <img class="companies" src="https://i.imgur.com/SKwc9pz.png" alt="companies"> -->
         <!-- <img class="companies" src="https://i.imgur.com/u5qAWdG.png" alt="companies"> -->
         <!-- <img class="companies" src="https://i.imgur.com/259lHN0.mp4" alt="companies"> -->
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/h8NFVgA.mp4" type="video/mp4">
         </video>
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/CGAOJsK.mp4" type="video/mp4">
         </video>
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/wAVwRyE.mp4" type="video/mp4">
         </video>
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/McINvRR.mp4" type="video/mp4">
         </video>
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/IuOHGAU.mp4" type="video/mp4">
         </video>
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/259lHN0.mp4" type="video/mp4">
         </video>
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/UOO25SD.mp4" type="video/mp4">
         </video>
-        <video loop=true muted controls autoplay=true class="companies">
+        <video loop=true muted  autoplay=true class="companies">
             <source src="https://i.imgur.com/jfMzxDa.mp4" type="video/mp4">
         </video>
           
