Styles Landing Page

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -125,39 +125,47 @@
         <h3>Copmanies using InTouch</h3>
     </div>
     <div class="landingPanel4g flex-container">
-        <!-- <img class="companies" src="https://i.imgur.com/5EfERqB.png" alt="companies"> -->
-        <!-- <img class="companies" src="https://i.imgur.com/Mc7LitZ.png" alt="companies"> -->
-        <!-- <img class="companies" src="https://i.imgur.com/VZUPtCi.png" alt="companies"> -->
-        <!-- <img class="companies" src="https://i.imgur.com/ASXIyHp.png" alt="companies"> -->
-        <!-- <img class="companies" src="https://i.imgur.com/mcg2w9K.png" alt="companies"> -->
-        <!-- <img class="companies" src="https://i.imgur.com/SKwc9pz.png" alt="companies"> -->
-        <!-- <img class="companies" src="https://i.imgur.com/u5qAWdG.png" alt="companies"> -->
-        <!-- <img class="companies" src="https://i.imgur.com/259lHN0.mp4" alt="companies"> -->
-        <video loop=true muted  autoplay=true class="companies">
+        <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/h8NFVgA.mp4" type="video/mp4">
         </video>
-        <video loop=true muted  autoplay=true class="companies">
+        <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/CGAOJsK.mp4" type="video/mp4">
         </video>
-        <video loop=true muted  autoplay=true class="companies">
+        <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/wAVwRyE.mp4" type="video/mp4">
         </video>
-        <video loop=true muted  autoplay=true class="companies">
+        <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/McINvRR.mp4" type="video/mp4">
         </video>
-        <video loop=true muted  autoplay=true class="companies">
+        <img class="companies" src="https://i.imgur.com/5EfERqB.png" alt="companies">
+        <img class="companies" src="https://i.imgur.com/Mc7LitZ.png" alt="companies">
+        <img class="companies" src="https://i.imgur.com/VZUPtCi.png" alt="companies">
+        <img class="companies" src="https://i.imgur.com/amSbkOg.png" alt="companies">
+        <!-- <img class="companies" src="https://i.imgur.com/mcg2w9K.png" alt="companies">
+        <img class="companies" src="https://i.imgur.com/ASXIyHp.png" alt="companies">
+        <img class="companies" src="https://i.imgur.com/SKwc9pz.png" alt="companies">
+        <img class="companies" src="https://i.imgur.com/amSbkOg.png" alt="companies"> -->
+        <!-- <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/IuOHGAU.mp4" type="video/mp4">
         </video>
-        <video loop=true muted  autoplay=true class="companies">
+        <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/259lHN0.mp4" type="video/mp4">
         </video>
-        <video loop=true muted  autoplay=true class="companies">
+        <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/UOO25SD.mp4" type="video/mp4">
         </video>
-        <video loop=true muted  autoplay=true class="companies">
+        <video loop=true muted autoplay=true class="companies">
             <source src="https://i.imgur.com/jfMzxDa.mp4" type="video/mp4">
-        </video>
-          
+        </video> -->
+    </div>
+    <div class="landingPanle5">
+        <div class="left">
+            <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</h1>
+        </div>
+        <div class="right">
+            <a class="btn btn-primary btn-lg" href="{% url 'signup' %}">Join Today</a class="btn btn-primary">
+            <a class="btn btn-primary btn-lg" href="{% url 'about' %}">Contact Us</a class="btn btn-primary">
+        </div>
     </div>
 </section>
 
