--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -8,10 +8,6 @@ main {
   flex: 1 0 auto;
 }
 
-footer.page-footer {
-  padding-top: 0;
-  text-align: right;
-}
 .top-content .carousel-item {
     height: 100vh;
     min-height: 400px;
@@ -105,16 +101,14 @@ body{ height:100vh; margin:0; }
 
 header{ 
   min-height:50px; background:lightcyan;
-}
+} 
 footer{ 
-  min-height:50px; background:rgb(206, 206, 206);
+  background: #d1d1d1
+  
 }
 body{ 
   display:flex; 
   flex-direction:column; 
-}
-footer{
-  margin-top:auto; 
 }
 header{
   height: 4%;
@@ -145,4 +139,24 @@ body > header > nav > div > a > img {
 
 body {
   line-height: 1;
+}
+.landingPanle5{
+  margin-top: 10%;
+
+}
+.left {
+  float: left;
+}
+.right {
+ float: right;
+}
+
+body > footer > div > div > div > a > img{
+  padding: 0;
+  width: 6vmin;
+}
+body > footer > div > div > div > a {
+  text-align: center;
+  display: block;
+  padding-top: 1%;
 }
