--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -64,10 +64,16 @@
     {% block content %}
     {% endblock %}
   </main>
-  <footer>
-    <footer class="page-footer">
-      <div class="right">All Rights Reserved, &copy; 2021 inTouch &nbsp;</div>
-    </footer>
+  <footer class="mainfooter" role="contentinfo">
+    <div class="footer-middle">
+      <div class="row">
+        <div class="col-md-12 copy">
+          <a class="footlogo" href="{% url 'home' %}"><img src="https://i.imgur.com/POwpkoU.png" alt="logo"></a>
+          <hr>
+          <p class="text-center">&copy;All Rights Reserved, 2021 inTouch &nbsp;</p>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
