--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -60,7 +60,7 @@ header.navbar-fixed {
   padding: 10vmin;
 }
 .landingPanel4{
-  height: 200vh;
+  height: 150vh;
   padding: 10%;
 }
 .landingPanel2g{
@@ -103,8 +103,8 @@ header{
   min-height:50px; background:lightcyan;
 } 
 footer{ 
-  background: #d1d1d1
-  
+  background: #d1d1d1;
+  margin-top: 10vmin;
 }
 body{ 
   display:flex; 
@@ -114,7 +114,7 @@ header{
   height: 4%;
 }
 main {
-  margin-top: 4%;
+  margin-top: 4.5%;
 }
 body > header > nav > div > a > img {
   padding: 0;
