--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,6 +1,109 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Pricing</h1>
+    <p class="lead">View The Possibilites at Different Prrice Points</p>
+</div>
 
-<h1>about page</h1>
+<div class="container">
+    <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Free</h4>
+            </div>
+            <div class="card-body">
+                <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                    <li>10 Recipients</li>
+                    <li>10 GB of storage </li>
+                    <li>50 Messages</li>
+                    <li>Email support</li>
+                    <li>Help center access</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+            </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Pro</h4>
+            </div>
+            <div class="card-body">
+                <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                    <li>20 Recipients</li>
+                    <li>100 GB of storage</li>
+                    <li>200 Messages</li>
+                    <li>Priority email support</li>
+                    <li>Help center access</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+            </div>
+        </div>
+        <div class="card mb-4 shadow-sm">
+            <div class="card-header">
+                <h4 class="my-0 font-weight-normal">Enterprise</h4>
+            </div>
+            <div class="card-body">
+                <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                    <li>Unlimited Recipients</li>
+                    <li>1000 GB of storage</li>
+                    <li>Unlimited Messages</li>
+                    <li>Phone and email support</li>
+                    <li>Help center access</li>
+                </ul>
+                <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+            </div>
+        </div>
+    </div>
+</div>
+<section class="landing1">
+    <div class="l1Header">
+        <div class="l1title">
+            <h1 style="text-align: center;">Communication For Large Scale</h1>
+            <h1 style="text-align: center;">Buisnesses Made Easy</h1>
+        </div>
 
+        <div class="grid-container">
+            <!-- <div class="row row-cols-2"> -->
+            <div class="grid-item">
+                <h2 class="animate__animated animate__fadeInUp">Helping you grow</h2>
+                <p>
+                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    Neque porro quisquam est.
+                </p>
+                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+            </div>
+            <div class="grid-item">
+                <h2 class="animate__animated animate__fadeInUp">Uniting All Your Employees and Team Members</h2>
+                <p>
+                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    Neque porro quisquam est.
+                </p>
+                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+            </div>
+            <div class="grid-item">
+                <h2 class="animate__animated animate__fadeInUp">Simple Fast Connection at Your Fingertips</h2>
+                <p>
+                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    Neque porro quisquam est.
+                </p>
+                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+            </div>
+            <div class="grid-item">
+                <h2 class="animate__animated animate__fadeInUp">Keep Track Of All Events, Notifications, and Alerts</h2>
+                <p>
+                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
+                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    Neque porro quisquam est.
+                </p>
+                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+            </div>
+            <!-- </div> -->
+        </div>
+    </div>
+</section>
 {% endblock %}
