Update copy for home.html template

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -51,36 +51,28 @@
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Helping you grow</h2>
                 <p>
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                    While today's communcation tools are great for the general public, they do not serve businesses and teams who are working to be more efficient. inTouch builds communication while streamlining efficiency.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Uniting All Your Employees and Team Members</h2>
                 <p>
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                    inTouch allows managers to directly notify their team members via direct, individually customizable text messages with a single click. Team members will receive updates directly to their phone without the privacy concerns or annoyance of group texts.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Simple Fast Connection at Your Fingertips</h2>
                 <p>
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                    The rise in remote work is creating a market for consumer applications that are simple, easy to use and require no extra hardware. inTouch replaces cumbersome group texts while still allowing seamless communication between managers and team members.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
             </div>
             <div class="grid-item">
-                <h2 class="animate__animated animate__fadeInUp">Keep Track Of All Events, Notifications, and Alerts</h2>
+                <h2 class="animate__animated animate__fadeInUp">Backed by the Highly Praised Twilio API</h2>
                 <p>
-                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                    Neque porro quisquam est.
+                    inTouch uses Twilio as its API messaging service. Twilio is used by Fortune 500 companies all over the world. It is praised by developers and users alike for its dependability and security.
                 </p>
                 <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
             </div>
@@ -94,11 +86,9 @@
             <img class="panelImg1left" src="https://i.imgur.com/q0vFLOI.jpg" alt="companyImage">
         </div>
         <div class="grid-item">
-            <h2>Keep Track Of All Events, Notifications, and Alerts</h2>
+            <h2>Say Goodbye to Group Texts, Email Chains and the Pony Express</h2>
             <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                Neque porro quisquam est.
+                Currently there is no ideal way to message team members and employees directly to their phones while encouraging connection and keeping their information secure. inTouch provides a unique service to small and large businesses to connect with employees without the hassle.
             </p>
             <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
         </div>
@@ -108,9 +98,7 @@
         <div class="grid-item">
             <h2>Keep Track Of All Events, Notifications, and Alerts</h2>
             <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                Neque porro quisquam est.
+                inTouch is a simple and elegant way for managers to individually push notification texts to team members without the hassle of creating group messages and fielding replies.
             </p>
             <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
         </div>
@@ -121,8 +109,8 @@
 <section class="landingPanel4">
     <div class="l4header">
         <h1>Keeping You Connected</h1>
-        <h3>The Power of engaging billions of employees in a global scale</h3>
-        <h3>Copmanies using InTouch</h3>
+        <h3>The Power of engaging millions of employees on a global scale</h3>
+        <h3>Companies using inTouch</h3>
     </div>
     <div class="landingPanel4g flex-container">
         <!-- <img class="companies" src="https://i.imgur.com/5EfERqB.png" alt="companies"> -->
