--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -20,7 +20,7 @@
                     <li>Email support</li>
                     <li>Help center access</li>
                 </ul>
-                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+                <a href="{% url 'signup' %}" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</a>
             </div>
         </div>
         <div class="card mb-4 shadow-sm">
@@ -36,7 +36,7 @@
                     <li>Priority email support</li>
                     <li>Help center access</li>
                 </ul>
-                <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+                <a href="{% url 'signup' %}" class="btn btn-lg btn-block btn-primary">Get started</a>
             </div>
         </div>
         <div class="card mb-4 shadow-sm">
@@ -52,7 +52,7 @@
                     <li>Phone and email support</li>
                     <li>Help center access</li>
                 </ul>
-                <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+                <a href="{% url 'signup' %}" class="btn btn-lg btn-block btn-primary">Get started</a>
             </div>
         </div>
     </div>
