--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -1,28 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Profile</h1>
-
 
 <div class="card">
-    
-        <div class="card-content">
-            <span class="card-title">
-                <p>Name: {{ profile.user }}</p>
-            </span>
-            <p>City: {{ profile.city }}</p>
-            <p>State: {{ profile.state }}</p>
-            <p>Phone: {{ profile.ph_number }}</p>
-            <p>ID: {{ profile.user.id }}</p>
-            <p>Business: {{ profile.business }}</p>
-        
-
-        </div>
-    
-
+    <div class="card-body"></div>
+        <span class="card-title">
+            <p>Name: {{ profile.user }}</p>
+        </span>
+        <p>City: {{ profile.city }}</p>
+        <p>State: {{ profile.state }}</p>
+        <p>Phone: {{ profile.ph_number }}</p>
+        <p>ID: {{ profile.user.id }}</p>
+        <p>Business: {{ profile.business }}</p>
+    </div>
 </div>
-
-
 <a href="{% url 'profile_update' profile.id%}">Edit Profile</a>
 
 {% endblock %}
