--- a/main_app/templates/main_app/recipient_list.html
+++ b/main_app/templates/main_app/recipient_list.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Recipient List</h1>
-{% for recipient in recipient_list %}
-    <div class="card">
+<div class="Rmain">
+    <h1>Recipient List</h1>
+    {% for recipient in recipient_list %}
+    <div class="recipients card">
         <div class="card-content">
-            <span class="card-title">{{ recipient.name }}</span>
-            <p>Number: {{ recipient.ph_number }}</p>
-            <p>Email: {{ recipient.email }}</p>
+            <h3 class="card-title">{{ recipient.name }}</h3>
+            <p><span>Number:</span>{{ recipient.ph_number }}</p>
+            <p><span>Email:</span> {{ recipient.email }}</p>
         </div>
-        <a href="{% url 'recipient_delete' recipient.id %}">Delete</a>
+        <div class="dltBtn">
+            <a class="btn btn-primary" href="{% url 'recipient_delete' recipient.id %}">Delete</a>
+        </div>
     </div>
-{% endfor %}
-{% endblock %}
+    {% endfor %}
+    {% endblock %}
+</div>
