--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -3,7 +3,7 @@
 
 
 <div class="card">
-    <div class="card-body"></div>
+    <div class="card-body">
         <span class="card-title">
             <p>Name: {{ profile.user }}</p>
         </span>
@@ -13,7 +13,7 @@
         <p>ID: {{ profile.user.id }}</p>
         <p>Business: {{ profile.business }}</p>
     </div>
+    <a class="btn btn-primary" href="{% url 'profile_update' profile.id%}">Edit Profile</a>
 </div>
-<a href="{% url 'profile_update' profile.id%}">Edit Profile</a>
 
 {% endblock %}
