--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -114,16 +114,16 @@
     </div>
     <div class="landingPanel4g flex-container">
         <video loop=true muted autoplay=true class="companies">
-            <source src="https://i.imgur.com/h8NFVgA.mp4" type="video/mp4">
+            <source src="https://i.imgur.com/UeWMCCg.mp4" type="video/mp4">
         </video>
         <video loop=true muted autoplay=true class="companies">
-            <source src="https://i.imgur.com/CGAOJsK.mp4" type="video/mp4">
+            <source src="https://i.imgur.com/ZFdU1jB.mp4" type="video/mp4">
         </video>
         <video loop=true muted autoplay=true class="companies">
-            <source src="https://i.imgur.com/wAVwRyE.mp4" type="video/mp4">
+            <source src="https://i.imgur.com/uHVd10m.mp4" type="video/mp4">
         </video>
         <video loop=true muted autoplay=true class="companies">
-            <source src="https://i.imgur.com/McINvRR.mp4" type="video/mp4">
+            <source src="https://i.imgur.com/zPHiKLB.mp4" type="video/mp4">
         </video>
         <img class="companies" src="https://i.imgur.com/5EfERqB.png" alt="companies">
         <img class="companies" src="https://i.imgur.com/Mc7LitZ.png" alt="companies">
