--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -73,7 +73,7 @@
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
                 </p>
-                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+                <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Uniting All Your Employees and Team Members</h2>
@@ -82,7 +82,7 @@
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
                 </p>
-                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+                <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Simple Fast Connection at Your Fingertips</h2>
@@ -91,7 +91,7 @@
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
                 </p>
-                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+                <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
             <div class="grid-item">
                 <h2 class="animate__animated animate__fadeInUp">Keep Track Of All Events, Notifications, and Alerts</h2>
@@ -100,7 +100,7 @@
                     sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
                     Neque porro quisquam est.
                 </p>
-                <a class="btn btn-outline-primary" href="{% url 'about' %}">Learn More</a>
+                <a class="btn btn-outline-primary" href="{% url 'signup' %}">Get Started</a>
             </div>
             <!-- </div> -->
         </div>
